2009-11-22  Neil Williams  <linux@codehelp.co.uk>

	* Makefile.am: Add ACOCAL_AMFLAGS.
	* configure.ac: Bump version, add dependencies on
	cairo and pango for PDF export support.
	* gpdftext.doap: Kick off the next version.
	* src/ebookui.c: Migrate some PDF code to pdf.c
	* src/ebookui.h: Migrate some PDF code to pdf.c
	* src/pdf.c: Make the ideas into something approaching
	useful example code.
	* src/pdf.h: changes from ebookui.h

2009-11-19  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Set the preference value for the
	spell check menu item from GConf in create_window ().
	* src/gpdftext.glade: Set the text area to have
	default focus.

2009-11-19  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Add undo/redo support. (Closes: #2)
	* src/ebookui.h: Add GTrashStacks for undo and redo.
	* src/gpdftext.glade: Add buttons for undo and redo.

2009-11-18  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Add handler for activating and
	deactivating Save button and menu. (Closes: #3)

2009-11-08  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Wrong prototype for delete_cb when
	called as a delete_event, add delete_event_cb and use
	only in the delete_event signal. (Closes: #8)

2009-11-08  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Wrap gtk_spell attach/detach hook when
	loading files to allow compilation when gtkspell is not
	available. (Closes: #7)

2009-11-07  Neil Williams  <linux@codehelp.co.uk>

	* src/main.c: Ensure g_type_init is called before testing
	gconf_client. (Closes: #6)

2009-11-04  Neil Williams  <linux@codehelp.co.uk>

	* configure.ac: Add -Wl,--no-add-needed in extra-compile-warning
	mode to catch missing linkages.

2009-10-22  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Enable progressbar monitoring of
	PDF load as a background task.
	* src/main.c: Enable documentors now that the Manual
	exists.
	* src/spell.c: Ensure a usable font is requested
	before trying to change to it.
